added auth file

--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-<h1>Hello World v2</h1>
+<h1>Auth file</h1>
 My new text
+
+<!-- 
+1. Master/Main  (Production)
+2. Develop      (Develop)
+4. Feature Branches 
+    (Auth,
+     Cart, 
+     Search) -->
